--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <button type="button" class="btn btn-warning btn-block col-12" ><a href="#form" class="text-dark"> Reserve Table</a></button>
+                    <button type="button" class="btn btn-warning btn-block col-12" ><a href="#form" class="text-daark"> Reserve Table</a></button>
                 </div>
             </div>
         </div>
@@ -146,10 +146,10 @@
                             <div class="form-group row">
                                 <label for="dateandtime" class="col-12 col-sm-2 col-form-label">Date and Time</label>
                                 <div class="col-sm-4">
-                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
                                 </div>
                                 <div class="col-sm-4">
-                                    <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
                                 </div>
                             </div>
 
