--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <button type="button" class="btn btn-warning btn-block col-12" ><a href="#form" class="text-daark"> Reserve Table</a></button>
+                    <a class="btn btn-warning btn-block col-12" href="#form" class="text-dark">Reserve Table</a>
                 </div>
             </div>
         </div>
