--- a/index.html
+++ b/index.html
@@ -86,13 +86,95 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class="btn btn-warning btn-block nav-link col-12"
-                        data-toggle="tooltip" data-html="true" title="Or call Us at <br><strong>+91 9876543210</strong>" 
-                        data-placement="bottom" href="#form">Reserve Table</a>
+                    <a class="btn btn-warning btn-block nav-link col-12"
+                        data-toggle="modal" data-target="#reserveform">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <div id="reserveform" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="guestsnum" class="col-sm-2 col-form-label">Number of Guests</label>
+                            <div class="col-sm">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="guestsnum" id="guestsnum1" value="option1">
+                                    <label class="form-check-label" for="guestsnum1">&nbsp1</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="guestsnum" id="guestsnum2" value="option2">
+                                    <label class="form-check-label" for="guestsnum2">&nbsp2</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="guestsnum" id="guestsnum3" value="option3">
+                                    <label class="form-check-label" for="guestsnum3">&nbsp3</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="guestsnum" id="guestsnum4" value="option4">
+                                    <label class="form-check-label" for="guestsnum4">&nbsp4</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="guestsnum" id="guestsnum5" value="option5">
+                                    <label class="form-check-label" for="guestsnum5">&nbsp5</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="guestsnum" id="guestsnum6" value="option6">
+                                    <label class="form-check-label" for="guestsnum6">&nbsp6</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="smokingradiobtn" class="col-sm-2 col-form-label">Section</label>
+                            <div class="btn-group btn-group-toggle col-sm-auto" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                  <input type="radio" name="smokingradiobtn" id="option1" autocomplete="off" checked> Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                  <input type="radio" name="smokingradiobtn" id="option2" autocomplete="off"> Smoking
+                                </label>
+                            </div>
+                        </div>
+                        
+                        <div class="form-group row">
+                            <label for="dateandtime" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                            <div class="col-sm-4">
+                                <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                            </div>
+                            <div class="col-sm-4">
+                                <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                            </div>
+                        </div>
+
+                        <div class="form-group-row">
+                            <div class="offset-sm-2">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">
+                                    Reserve
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row row-content">
@@ -201,69 +283,6 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content">
-            <div class="col-12 col-sm-8 offset-sm-2">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form id="form">
-                            <div class="form-group row">
-                                <label for="guestsnum" class="col-sm-2 col-form-label">Number of Guests</label>
-                                <div class="col-sm">
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="guestsnum" id="guestsnum1" value="option1">
-                                        <label class="form-check-label" for="guestsnum1">&nbsp1</label>
-                                    </div>
-
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="guestsnum" id="guestsnum2" value="option2">
-                                        <label class="form-check-label" for="guestsnum2">&nbsp2</label>
-                                    </div>
-
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="guestsnum" id="guestsnum3" value="option3">
-                                        <label class="form-check-label" for="guestsnum3">&nbsp3</label>
-                                    </div>
-
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="guestsnum" id="guestsnum4" value="option4">
-                                        <label class="form-check-label" for="guestsnum4">&nbsp4</label>
-                                    </div>
-
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="guestsnum" id="guestsnum5" value="option5">
-                                        <label class="form-check-label" for="guestsnum5">&nbsp5</label>
-                                    </div>
-
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="guestsnum" id="guestsnum6" value="option6">
-                                        <label class="form-check-label" for="guestsnum6">&nbsp6</label>
-                                    </div>
-                                </div>
-                            </div>
-                            
-                            <div class="form-group row">
-                                <label for="dateandtime" class="col-12 col-sm-2 col-form-label">Date and Time</label>
-                                <div class="col-sm-4">
-                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
-                                </div>
-                                <div class="col-sm-4">
-                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
-                                </div>
-                            </div>
-
-                            <div class="form-group-row">
-                                <div class="offset-sm-2">
-                                    <button type="submit" class="btn btn-primary">
-                                        Reserve
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 
     <footer class="footer">
@@ -311,11 +330,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
 
 </html>
