--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="loginButton">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
                 </span>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-12 col-sm align-self-center">
                     <a class="btn btn-warning btn-block nav-link col-12"
-                        data-toggle="modal" data-target="#reserveform">Reserve Table</a>
+                        id="reserveButton">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -348,6 +348,14 @@
                     $('#carouselButton').children('span').removeClass('fa-play');
                     $('#carouselButton').children('span').addClass('fa-pause');
                 }
+            });
+
+            $('#reserveButton').click(function(){
+                $('#reserveform').modal();
+            });
+
+            $('#loginButton').click(function(){
+                $('#loginModal').modal();
             });
         });
     </script>
